# candlex

./: .gitignore  CHANGELOG.md  README.md  blend.exs  mix.exs  mixfile.ex  project.exs
.github/: dependabot.yml
.github/workflows/: binaries.yml  ci.yml
blend/: premix.exs
config/: config.exs
examples/: image_classification.exs  linear_regression.exs  speech_to_text.exs  text_classification.exs
lib/candlex/: backend.ex  mixfile.ex  native.ex
mixfiles/: nx-edge.exs  nx05.exs  nx06.exs
native/candlex/: Cargo.toml  build.rs
native/candlex/src/: devices.rs  kernels.rs  lib.rs  metal_kernels.rs  ops.rs  tensors.rs
native/candlex/src/kernels/: custom_binary.cu
native/candlex/src/metal_kernels/: custom_binary.metal  custom_unary.metal
test/: candlex_test.exs  defn_test.exs  random_test.exs
