[package]
name = "candlex"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "candlex"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
candle-core = "0.4.1"
half = "2.4.0"
num-traits = "0.2.18"
rustler = { version = "0.31.0", default-features = false, features = ["derive", "nif_version_2_16"] }
statrs = "0.16.0"
thiserror = "1.0.58"

[build-dependencies]
bindgen_cuda = { version = "0.1.4", optional = true }

[features]
cuda = ["candle-core/cuda", "dep:bindgen_cuda"]
