[package]
name = "candlex"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "candlex"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
candle-core = "0.6.0"
half = "2.4.1"
num-traits = "0.2.19"
rustler = { version = "0.33.0", default-features = false, features = ["derive", "nif_version_2_16"] }
statrs = "0.17.1"
thiserror = "1.0.61"

[build-dependencies]
bindgen_cuda = { version = "0.1.5", optional = true }

[features]
cuda = ["candle-core/cuda", "dep:bindgen_cuda"]
